Fixed using incorrect path

--- a/app/views/subsidiary_data/index.html.erb
+++ b/app/views/subsidiary_data/index.html.erb
@@ -3,5 +3,5 @@
      <div><%= item.debug %></div>
    <% end %>
 <% else -%>
-  No subsidiary data found. <%= link_to "upload some data?", subsidiary_data_path %>
+  No subsidiary data found. <%= link_to "upload some data?", new_subsidiary_datum_path %>
 <% end -%>
