--- a/app/views/subsidiary_data/index.html.erb
+++ b/app/views/subsidiary_data/index.html.erb
@@ -1,5 +1,5 @@
 <div class="hero-unit">
-  <h1>Total revenue: <%= @revenue.to_f %>!</h1>
+  <h1>Total revenue: <%= @revenue %>!</h1>
   <p><%= @purchases.size %> purchases have been made!</p>
 </div>
 
