Added back application.js.
Rail's destroy link magic won't work without it.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>DataEngineering</title>
   <%= stylesheet_link_tag    "bootstrap", 'bootstrap=responsive', 'application' %>
-  <%= javascript_include_tag "bootstrap.js" %>
+  <%= javascript_include_tag "application", "bootstrap.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
